--- a/src/AppPartes.Web/Views/Home/Index.cshtml
+++ b/src/AppPartes.Web/Views/Home/Index.cshtml
@@ -86,6 +86,7 @@
                                     {
                                         <th>Tipos Excel</th>
                                         <th>Calendario</th>
+                                        <th><a class="nav-link text-dark" asp-area="" asp-controller="UdObraPresu" asp-action="Index">Ud. Obra Presu</a></th>
                                     }
                                 </tr>
 
